developent: fix text-wrap on notification

--- a/src/components/common/Notifications/Notifications.scss
+++ b/src/components/common/Notifications/Notifications.scss
@@ -5,6 +5,13 @@
     max-width: 400px;
     margin-top: 7px;
 
+    .notification-message-container {
+      width: 100%;
+      word-wrap: normal;
+      overflow-wrap: anywhere;
+      overflow: hidden;
+    }
+
     .notification-date-container {
       position: absolute;
       bottom: 0;
